# freecad.optics_design_workbench

./: .gitattributes  .gitignore  .pymon  LICENSE.txt  MANIFEST.in  README.md  freecad  package.xml  pyproject.toml  pytest.ini  setup.py
.github/workflows/: python-app.yml
dev/: bootstrap.sh  build-and-upload.sh  build-release.sh  build.sh  clean-ipynb.py  clean.sh  cleanup-test-folders.sh  commit-and-tag-new-major-version.sh  commit-and-tag-new-micro-version.sh  commit-and-tag-new-minor-version.sh  download-latest-appimage.sh  ensure-sourcefile-headers.py  run-appimage-tests.sh  run-docker-tests.sh  run-tests.sh  start-container-freecad.sh  update-packagexml.py  update-setup.py
examples/1-source-and-detector/: main.FCStd  main.ipynb  visualize.ipynb
examples/1-source-and-detector/main.OpticsDesign/notebooks/: visualize.ipynb
examples/2-lens-and-mirror/: main.FCStd
examples/3-parameter-sweeps/: main.FCStd  sweep.ipynb
examples/3-parameter-sweeps/main.OpticsDesign/notebooks/: sweep.ipynb
freecad/optics_design_workbench/: MANIFEST.in  __init__.py  detect_pyside.py  init_gui.py  io.py  timing.py  version.py
freecad/optics_design_workbench/distributions/: __init__.py  points_by_density.py  random_number_generator.py
freecad/optics_design_workbench/freecad_elements/: __init__.py  common.py  find.py  generic_source.py  optical_group.py  point_source.py  ray.py  replay_source.py  simulation_actions.py  simulation_settings.py  surface_source.py
freecad/optics_design_workbench/gui_windows/: __init__.py  common.py  progress.py
freecad/optics_design_workbench/jupyter_utils/: __init__.py  files.py  freecad_document.py  histogram.py  histograms.py  hits.py  parameter_sweeper.py  progress.py  retries.py  transforms.py
freecad/optics_design_workbench/simulation/: __init__.py  processes.py  raytracing_cache.py  results_store.py  tracing_cache.py
freecad/optics_design_workbench/simulation/jobs/: simulation_job.py
freecad/optics_design_workbench/simulation/processes/: __init__.py  simulation_loop.py  worker_process.py
freecad_/: optics_design_workbench
src/freecad/: optics_design_workbench
src/optics_design_workbench/: io.py  timing.py
src/optics_design_workbench/distributions/: random_number_generator.py
src/optics_design_workbench/freecad_elements/: common.py  find.py  generic_source.py  optical_group.py  point_source.py  ray.py  replay_source.py  simulation_settings.py
src/optics_design_workbench/gui_windows/: common.py  progress.py
src/optics_design_workbench/jupyter_utils/: __init__.py  fan_math.py  files.py  freecad_document.py  histogram.py  histograms.py  hits.py  parameter_sweeper.py  point_clouds.py  progress.py
src/optics_design_workbench/simulation/: results_store.py  tracing_cache.py
src/optics_design_workbench/simulation/processes/: simulation_loop.py  worker_process.py
test-docker/tumbleweed/: Dockerfile  compose.yml
test-docker/ubuntu.broken/: Dockerfile  WHY-BROKEN.txt  compose.yml
test/0-python/: distributions_quantitative.ipynb  z-notebooks.py
test/00-pure-python/: 0-install-package.py
test/1-freecad/: edmund-optics-lens.FCStd  gaussian.FCStd  gausssian-notest.ipynb  grating.FCStd  lens-optimizer.FCStd  mirror-diffuse.FCStd  mirror.FCStd  playground.FCStd
test/1-freecad/mirror-diffuse.OpticsDesign/notebooks/: preview.ipynb
test/10-old-tests/: gaussian.FCStd  lambert-source.FCStd  lens-overlap.FCStd  run-simulations.py
test/10-pure-python-notebooks/: distributions_quantitative.ipynb
test/10-python-notebooks/: meshes_by_density.ipynb
test/20-freecad-document/: from-fcstd-folder.py  simple.FCStd
test/20-global-placement/: external-file.FCStd  external-file2.FCStd  main.FCStd  nested-structure.FCStd  z-freecad-placements.py
test/21-simulation-modes/: main.FCStd  run-simulations.py
test/22-global-placement/: main.FCStd  nested-structure.FCStd  z-freecad-placements.py  z-nested.py
test/50-old-tests/: gaussian.FCStd  gausssian-notest.ipynb  lambert-source.FCStd  lens-optimizer.FCStd  mirror-diffuse.FCStd  mirror.FCStd  nesting.FCStd  playground.FCStd  run-simulations.py
test/70-freecad-point-source-slow/: source-and-absorber.FCStd
test/70-point-source-slow/: run_notebooks.py  source-and-absorber.FCStd
test/80-surface-source-slow/: C330TMD-B-Step.step  imported-stepfile-as-surface-source.FCStd  z-surface-source.py
test/90-memory-leak-check/: main.FCStd  run_notebooks.py  test_memory_leaks.ipynb
test/freecad/: __init__.py  gaussian.FCStd  gausssian-notest.ipynb  gausssian.ipynb  grating.FCStd  lambert-source.FCStd  lens-optimizer-sweep.ipynb  lens-optimizer.FCStd  lens-overlap.FCStd  nosettings.FCStd  playground.FCStd  replay.FCStd  test_permissions.py  test_run_and_simulate.py
test/freecad/no-write-permission/: playground.FCStd
test/python/: distributions.ipynb  distributions_basics.ipynb  distributions_quantitative.ipynb  meshes_by_density.ipynb  test_notebooks.py
(+11 files in other folders)
