<?xml version="1.0" encoding="UTF-8" standalone="no" ?>
<package format="1" xmlns="https://wiki.freecad.org/Package_Metadata">
  <name>Optics Design Workbench</name>
  <description>Physically accurate forward ray tracing for optics simulation and optimization with FreeCAD workbench frontend.</description>
  <version>0.6.0</version>
  <date>2025-03-08</date>
  <maintainer email="philipp.bredol@rwth-aachen.de">Philipp Bredol</maintainer>
  <depend>numpy</depend>
  <depend>scipy</depend>
  <depend>sympy</depend>
  <depend>matplotlib</depend>
  <depend>atomicwrites</depend>
  <license file="LICENSE">LGPL-3.0-or-later</license>
  <url type="repository" branch="master">https://github.com/zaphB/freecad.optics_design_workbench</url>
  <url type="readme">https://github.com/zaphB/freecad.optics_design_workbench/blob/master/README.md</url>
  <icon>workbench.svg</icon>
  <content>
    <workbench>
      <classname>OpticsDesignWorkbench</classname>
    </workbench>
  </content>
</package>
