[build-system]
requires = ["hatchling", "versioningit"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "versioningit"

[tool.hatch.build.targets.sdist]
exclude = [
  "test-docker",
  "dev",
  "releases",
  "dist"
]

[tool.hatch.build.targets.wheel]
packages = [
  "freecad/optics_design_workbench",
]

[project]
name = "optics_design_workbench"
dynamic = ["version"]
dependencies = [
  "numpy>=2.0.0", # <- some tests use atan instead of arctan, which only exists since numpy 2 
  "scipy>=1.14.0", # <- require scipy version with COBYQA optimizer
  "sympy", 
  "matplotlib", 
  "seaborn",
  "atomicwrites",
  "cloudpickle",
  "PySide6",
  "jupyterlab", # <- jupyter lab ist just here because we usually want to work with jupyter, not because it is strictly necessary to use the package
]

requires-python = ">=3.11"
authors = [
  {name = "Philipp Bredol", email = "philipp.bredol@rwth-aachen.de"}
]

description = "Physically accurate forward ray tracing for optics simulation and optimization with FreeCAD workbench frontend inspired by the FreeCAD OpticsWorkbench"
readme = "README.md"
license = {file = "LICENSE.txt"}

[project.urls]
Homepage = "https://github.com/zaphB/freecad.optics_design_workbench"
Repository = "https://github.com/zaphB/freecad.optics_design_workbench.git"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-monitor",
    "pytest-sugar",
    "jupyter",
    "ipykernel",
    "psutil",
]

[tool.pytest.ini_options]
pythonpath = [
  'freecad/optics_design_workbench',
]
addopts = [
  "--import-mode=importlib",
]
